<resources>
    <string name="app_name">IABCAndroid</string>
    <string name="skip">SKIP</string>
    <string name="fragment_home_ranked_movies">Ranked movies</string>
    <string name="home_fragment_more">More</string>
    <string name="app_def_text_short">abcd</string>
    <string name="contact_info">Contact Info</string>
    <string name="location">Location</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="fr_about_us_more">More IABC Events</string>
    <string name="login">Login</string>


    <string name="filter_design">Design</string>
    <string name="filter_cartoon">Cartoon</string>
    <string name="filter_comix">Comics</string>
    <string name="filter_music_and_sound">Music &amp; sound</string>
    <string name="filter_books">Books</string>
    <string name="fr_item_inner_author">Author</string>
    <string name="fr_item_inner_follow">Follow</string>
    <string name="fr_item_inner_watch_trailer">Watch Trailers</string>

    <string name="fr_item_inner_release_date">Release year:</string>
    <string name="fr_item_inner_release_director">Director:</string>
    <string name="fr_item_inner_release_writer">Writer:</string>
    <string name="fr_item_inner_release_actors">Actors:</string>
    <string name="fr_event_inner_start">Start</string>
    <string name="fr_event_inner_end">End</string>
    <string name="act_company_inner_movies">Movies</string>
    <string name="act_event_inner_menu_join">Join</string>
    <string name="act_event_inner_menu_joined">Joined</string>

    <string name="menu_name_home">Home</string>
    <string name="menu_name_marketplace">Marketplace</string>
    <string name="menu_name_companies">Companies</string>
    <string name="menu_name_events">Events</string>
    <string name="menu_name_about">About IABC</string>
    <string name="menu_name_f_a_q">F.A.Q</string>

</resources>
