<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/fr_event_inner_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/_black65"
        />

    <iabc.com.voli.iabcandroid.ui.custom.CTextView
        android:id="@+id/fr_event_inner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_def_text_short"
        android:textColor="@color/_333333"
        app:plusTextSize="@integer/plus_text_size_for_20"
        app:font_name="AVERNIR_NEXT"
        android:layout_marginTop="20dp"

        />

    <iabc.com.voli.iabcandroid.ui.custom.CTextView
        android:id="@+id/fr_event_inner_location"
        android:layout_marginTop="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/_9B9B9B"
        android:text="@string/app_def_text_short"
        app:plusTextSize="@integer/plus_text_size_for_12"
        app:font_name="AVERNIR_NEXT"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/fr_event_inner_time_layout_background"
            android:orientation="vertical"
            android:gravity="center"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <iabc.com.voli.iabcandroid.ui.custom.CTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/_827E7E"
                app:plusTextSize="@integer/plus_text_size_for_12"
                app:font_name="AVERNIR_NEXT"
                android:text="@string/fr_event_inner_start"
                />

            <iabc.com.voli.iabcandroid.ui.custom.CTextView
                android:id="@+id/fr_event_inner_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/_AB2572"
                app:plusTextSize="@integer/plus_text_size_for_18"
                app:font_name="AVERNIR_NEXT"
                android:text="@string/app_def_text_short"
                />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:src="@mipmap/calendar"
                />
            
            <iabc.com.voli.iabcandroid.ui.custom.CTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_def_text_short"
                android:layout_marginTop="8dp"
                android:textColor="@color/_9B9B9B"
                app:plusTextSize="@integer/plus_text_size_for_12"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/fr_event_inner_time_layout_background"
            android:orientation="vertical"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="right"
                >
                <iabc.com.voli.iabcandroid.ui.custom.CTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/_827E7E"
                    app:plusTextSize="@integer/plus_text_size_for_12"
                    app:font_name="AVERNIR_NEXT"
                    android:text="@string/fr_event_inner_end"
                    />

                <iabc.com.voli.iabcandroid.ui.custom.CTextView
                    android:id="@+id/fr_event_inner_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/_AB2572"
                    app:plusTextSize="@integer/plus_text_size_for_18"
                    app:font_name="AVERNIR_NEXT"
                    android:text="@string/app_def_text_short"
                    />

                </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>